k8s/pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - command:
    - sh
    - -c
    - echo 'Config loaded successfully' && sleep 3600
    image: busybox
    name: test-container
    volumeMounts:
    - mountPath: /etc/config
      name: config-volume
  volumes:
  - configMap:
      name: test-config
    name: config-volume
